Fix Scrolling on Mobile

--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -86,7 +86,7 @@
     order: 2;
     padding-left: 0 !important;
     ul {
-      width: 50vw !important;
+      width: 70vw !important;
     }
   }
 }
